# apps.core.preloaded.print-service

./: AUTHORS  CMakeLists.txt  LICENSE.APLv2  LICENSE.MIT  NOTICE  print-service.manifest  print-service.pc.in  project.config
TC/: CMakeLists.txt  create-printlist.sh  getppd.c  getppd.h  pdftopdf_test.sh  ppd_compare.c  ppd_test.sh  print-test-opmap.sh  test-automation.c
data/epson/: epson_inkjet.drv  epson_laser.drv
data/org_ppd/: epson_inkjet_org.drv  epson_laser_org.drv  epson_org.drv  samsung_org.drv
data/org_ppd/epson/: 3_remove_model_vendor.sh  Epson-Stylus_Office_BX935FWD-epson-escpr-en.ppd  arrange_ppd.sh  create_org_drv.sh
data/org_ppd/epson_inkjet/: 1_rename.sh  Epson-Artisan_635-epson-escpr-en.ppd  create_org_drv.sh
data/org_ppd/epson_laser/: 1_rename.sh  create_org_drv.sh
data/org_ppd/hp/: 1_delete_lang.sh  3_del_duplicate.sh  4_remove_model_vendor.sh  5_remove_parallel_only.sh  6_remove_product_vendor.sh  7_remove_duplicate_ppd.sh  8_remove_osx_keyword.sh  apollo-2100.ppd  apollo-2150.ppd  apollo-2200.ppd  apollo-2500.ppd  apollo-2600.ppd  apollo-2650.ppd  apollo-p2000-u.ppd  apollo-p2250.ppd  arrange_ppd.sh  create_drv.sh  create_org_drv.sh  hp-2000c.ppd  hp-2500c.ppd  hp-910.ppd  hp-915.ppd  hp-business_inkjet_1000.ppd  hp-business_inkjet_1100.ppd  hp-business_inkjet_1200.ppd  hp-business_inkjet_2200.ppd  hp-business_inkjet_2230.ppd  hp-business_inkjet_2250-ps.ppd  hp-business_inkjet_2280-ps.ppd  hp-business_inkjet_2300-ps.ppd  hp-business_inkjet_2600-ps.ppd  hp-business_inkjet_2800-ps.ppd  hp-business_inkjet_3000-ps.ppd  hp-cm8050_mfp_with_edgeline-ps.ppd  hp-color_inkjet_cp1700.ppd  hp-color_inkjet_printer_cp1700.ppd  hp-color_laserjet-ps.ppd  hp-color_laserjet_1600.ppd  hp-color_laserjet_2500_series-ps.ppd  hp-color_laserjet_2550_series-ps.ppd  (+683 more)
data/org_ppd/samsung/: 2_remove_model_vendor.sh  CLP-300.ppd  CLP-310.ppd  CLP-320.ppd  CLP-350.ppd  CLP-360.ppd  CLP-410.ppd  CLP-500.ppd  CLP-510.ppd  CLP-550.ppd  CLP-600.ppd  CLP-610.ppd  CLP-620.ppd  CLP-660.ppd  CLP-670.ppd  CLP-680.ppd  CLP-770.ppd  CLP-775.ppd  CLX-216x.ppd  CLX-3160.ppd  CLX-3170.ppd  CLX-3180.ppd  CLX-3300.ppd  CLX-4190.ppd  CLX-6200.ppd  CLX-6220.ppd  CLX-6240.ppd  CLX-6250.ppd  CLX-6260.ppd  CLX-8380.ppd  CLX-8385.ppd  CLX-8385X.ppd  CLX-8540.ppd  CLX-8540X.ppd  CLX-8640_8650.ppd  CLX-9250_9350.ppd  CLX-9252_9352.ppd  CLX-92x1_93x1.ppd  CLX-981x.ppd  CLX-982x.ppd  (+99 more)
data/samsung/cms/: CLP-300sc.cts  CLP-310sc.cts  CLP-320sc.cts  CLP-360sc.cts  CLP-500sc.cts  CLP-600sc.cts  CLP-610sc.cts  CLP-620sc.cts  CLP-660sc.cts  CLX-216xsc.cts  CLX-3160sc.cts  CLX-3170sc.cts  CLX-3180sc.cts  CLX-6220sc.cts  ML-2160sc.cts  ML-2540sc.cts  ML-2950sc.cts  SCX-3400sc.cts  SCX-4650sc.cts  SCX-470xsc.cts  SCX-472xsc.cts  SF-760sc.cts
debian/: changelog  control  copyright  mrgtmp1  print-service-dev.install.in  print-service-dev.postinst  print-service.install.in  print-service.postinst  rules
drvopt/: CMakeLists.txt  Makefile  README  drvopt  drvopt.go  getdrv  getdrv.go
drvopt/doc/: Makefile  drvopt.1  graph1.gv  graph2.gv  graph3.gv  graph4.gv  graph5.gv  graph6.gv
drvopt/drv/: drv.go
getdrv/: CMakeLists.txt  Makefile  README  main.c  main.h  stack.c
getppd/: CMakeLists.txt  backtrace.c  main.c  main.h
include/: pt_api.h  pt_common.h  pt_db.h  pt_debug.h  pt_job.h  pt_optionmapping.h  pt_ppd.h  pt_printer.h  pt_status.h  pt_test.h  pt_utils.h
libptdb/: CMakeLists.txt  ptdb.c
packaging/: print-service.changes  print-service.spec
scripts/: arrange.lib  base.lib  create-printlist.sh  hp-depr.list  print-test-getppd.sh  print.lib  search.lib
src/: pt_job.c  pt_optionkeywords.c  pt_optionmapping.c  pt_ppd.c  pt_printer.c  pt_service.c  pt_status.c  pt_utils.c
udev-rules/: 91-print-service.rules
