CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(database C)
SET(PACKAGE_NAME print-service)

SET(PREFIX /usr)
SET(BINDIR "${PREFIX}/bin")
SET(SRCS_GETPPD main.c)
SET(GETPPD_NAME getppd)

INCLUDE(FindPkgConfig)
pkg_check_modules(GLIB2 REQUIRED glib-2.0)
INCLUDE_DIRECTORIES(GLIB2_INCLUDE_DIRS)
ADD_DEFINITIONS("-D_GNU_SOURCE")
ADD_DEFINITIONS("-D_XOPEN_SOURCE")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
ADD_EXECUTABLE(${GETPPD_NAME} ${SRCS_GETPPD})
TARGET_LINK_LIBRARIES(${GETPPD_NAME} ${GLIB2_LDFLAGS})
INSTALL(TARGETS ${GETPPD_NAME} DESTINATION ${BINDIR})