CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ptdb C)
SET(PACKAGE_NAME print-service)

SET(PREFIX /usr)
SET(LIBDIR "${PREFIX}/lib")

SET(DB_LIB_NAME ptdb)
SET(VERSION_MAJOR 1)
SET(VERSION "${VERSION_MAJOR}.2.7")
SET(SRCS_DB_LIB ptdb.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(GLIB2 REQUIRED glib-2.0)
INCLUDE_DIRECTORIES(GLIB2_INCLUDE_DIRS)

ADD_DEFINITIONS("-D_GNU_SOURCE")
ADD_DEFINITIONS("-D_XOPEN_SOURCE")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")

ADD_LIBRARY(${DB_LIB_NAME} SHARED ${SRCS_DB_LIB})
SET_TARGET_PROPERTIES(${DB_LIB_NAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${DB_LIB_NAME} PROPERTIES VERSION ${VERSION})
INSTALL(TARGETS ${DB_LIB_NAME} LIBRARY DESTINATION ${LIBDIR})